--- a/public/views/agencia/form-editar-agencia.html
+++ b/public/views/agencia/form-editar-agencia.html
@@ -1,48 +1,28 @@
-<div class="page-title full-width">
-    <div class="title-env">
-        <h1 class="title ng-binding">Editar agencia</h1>
-        <p class="description ng-binding">Puede editar los datos de la agencia.</p>
-    </div>
+<div class="bg-light lter b-b wrapper-md">
+    <h1 class="m-n font-thin h3">Editar agencia</h1>
 </div>
 
-<div class="form-wizard" ng-controller="EditarAgenciaCtrl">
-
-    <ul class="tabs">
-        <li ui-sref-active="active">
-            <a href ui-sref=".resumen">
-                Resumen
-            </a>
-        </li>
-        <li ui-sref-active="active">
-            <a href ui-sref=".datosPrincipales">
-                Datos principales
-            </a>
-        </li>
-        <li ui-sref-active="active">
-            <a href ui-sref=".crearBoveda.datosPrincipales">
-                Crear boveda
-            </a>
-        </li>
-        <li ui-sref-active="active">
-            <a href ui-sref=".crearCaja.datosPrincipales">
-                Crear caja
-            </a>
-        </li>
-        <li sg-data-keep="{module: 'ORGANIZACION', rol: ['ADMIN']}">
-            <div class="btn-group ">
-                <button type="button" ng-click="desactivar()" class="btn btn-danger" style="margin-bottom: 0px;">Desactivar</button>
-            </div>
-        </li>
-    </ul>
-
-    <div class="tab-content no-margin">
-        <div class="tab-pane with-bg active" >
-
-            <form name="form" ng-submit="submit()" novalidate>
-                <div ui-view></div>
-            </form>
-
+<div class="wrapper-md">
+    <div class="tab-container ng-isolate-scope">
+        <ul class="nav nav-tabs">
+            <li ui-sref-active="active">
+                <a href ui-sref=".resumen">
+                    Resumen
+                </a>
+            </li>
+            <li ui-sref-active="active">
+                <a href ui-sref=".datosPrincipales">
+                    Datos principales
+                </a>
+            </li>
+            <li class="pull-right">
+                <div class="btn-group">
+                    <button type="button" data-ng-click="desactivar()" class="btn btn-danger">Desactivar</button>
+                </div>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div ui-view></div>
         </div>
     </div>
-
 </div>
