--- a/public/views/agencia/form-crear-agencia.html
+++ b/public/views/agencia/form-crear-agencia.html
@@ -1,28 +1,106 @@
-<div class="page-title full-width">
-    <div class="title-env">
-        <h1 class="title ng-binding">Crear agencia</h1>
-        <p class="description ng-binding">Crea una agencia para despues crear bovedas y cajas.</p>
-    </div>
+<div class="bg-light lter b-b wrapper-md">
+    <h1 class="m-n font-thin h3">Crear agencia</h1>
 </div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title" ui-sref=".datosPrincipales">Ingrese los datos</h3>
-        <div class="panel-options">
-            <a href="" data-toggle="panel">
-                <span class="collapse-icon">–</span>
-                <span class="expand-icon">+</span>
-            </a>
-            <a href="" data-toggle="remove">
-                ×
-            </a>
-        </div>
-    </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-sm-12">
-                <form name="form" ng-submit="submit()" novalidate>
-                    <div ui-view></div>
-                </form>
+
+<div class="wrapper-md">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-12">
+
+                    <form name="form" ng-submit="submit()" novalidate>
+
+                        <div>
+                            <h4><strong>Datos principales</strong> </h4>
+
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && (form.sucursal.$touched || form.$submitted)}">
+                                        <label>Sucursal</label>
+                                        <ui-select name="sucursal" ng-model="combo.selected.sucursal" autofocus required>
+                                            <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
+                                            <ui-select-choices repeat="item in combo.sucursal | filter: $select.search">
+                                                <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                        <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese sucursal.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.codigo.$invalid && (form.codigo.$touched || form.$submitted)}">
+                                        <label>Codigo</label>
+                                        <input type="text"
+                                               name="codigo"
+                                               ng-model="view.agencia.codigo"
+                                               sg-codigo-agencia-validate
+                                               ui-mask="99"
+                                               class="form-control" required/>
+                                        <div ng-messages="form.codigo.$error" ng-if="form.codigo.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="codigoDisponible">Codigo no disponible.</div>
+                                            <div class="has-error" ng-message="required">Ingrese codigo.</div>
+                                        </div>
+                                        <span ng-show="form.codigo.$pending" us-spinner="spinnerConfig"></span>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4" ng-if="!view.sucursal.id && !view.agencia.id">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && (form.denominacion.$touched || form.$submitted)}">
+                                        <label>Denominacion</label>
+                                        <input type="text" name="denominacion" ng-model="view.agencia.denominacion" ng-maxlength="60" class="form-control" required/>
+                                        <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese denominacion.</div>
+                                            <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && (form.abreviatura.$touched || form.$submitted)}">
+                                        <label>Abreviatura</label>
+                                        <input type="text" name="abreviatura" ng-model="view.agencia.abreviatura" ng-maxlength="30" class="form-control" required/>
+                                        <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
+                                            <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <sg-ubigeo name="ubigeo" ng-model="view.agencia.ubigeo" requerido="true">
+                            </sg-ubigeo>
+
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.direccion.$invalid && (form.direccion.$touched || form.$submitted)}">
+                                        <label>Direccion</label>
+                                        <input type="text"
+                                               name="direccion"
+                                               ng-model="view.agencia.direccion"
+                                               class="form-control" required/>
+                                        <div ng-messages="form.direccion.$error" ng-if="form.direccion.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese direccion.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group" ng-class="{ 'has-error' : form.ubigeo.$invalid }" style="margin-top: -10px;">
+                                <div ng-messages="form.ubigeo.$error" ng-if="form.ubigeo.$dirty || form.$submitted">
+                                    <div class="has-error" style="color: #cc3f44; font-size: 12px;" ng-message="sgubigeo">Ingrese ubigeo.</div>
+                                </div>
+                            </div>
+
+                            <p>
+                                <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
+                                <button type="button" class="btn btn-default" ui-sref="^.buscarAgencias">Cancelar</button>
+                            </p>
+                        </div>
+
+                    </form>
+
+                </div>
             </div>
         </div>
     </div>
