--- a/public/views/agencia/form-editar-agencia-datosPrincipales.html
+++ b/public/views/agencia/form-editar-agencia-datosPrincipales.html
@@ -1,11 +1,11 @@
-<div>
+<form name="form" data-ng-submit="submit()" novalidate>
     <h4><strong>Datos principales</strong> </h4>
 
     <div class="row">
         <div class="col-sm-4">
             <div class="form-group">
                 <label>Sucursal</label>
-                <h4><span ng-bind="view.agenciaDB.sucursal.denominacion"></span></h4>
+                <h4><span ng-bind="view.agencia.sucursal.denominacion"></span></h4>
             </div>
         </div>
     </div>
@@ -14,26 +14,26 @@
         <div class="col-sm-4">
             <div class="form-group">
                 <label>Codigo</label>
-                <h4><span ng-bind="view.agenciaDB.codigo"></span></h4>
+                <h4><span ng-bind="view.agencia.codigo"></span></h4>
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'validate-has-error' : form.denominacion.$invalid && (form.denominacion.$touched || form.$submitted)}">
+            <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && (form.denominacion.$touched || form.$submitted)}">
                 <label>Denominacion</label>
                 <input type="text" name="denominacion" ng-model="view.agencia.denominacion" ng-maxlength="60" class="form-control" autofocus required/>
                 <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$touched || form.$submitted">
-                    <div class="validate-has-error" ng-message="required">Ingrese denominacion.</div>
-                    <div class="validate-has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
+                    <div class="has-error" ng-message="required">Ingrese denominacion.</div>
+                    <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'validate-has-error' : form.abreviatura.$invalid && (form.abreviatura.$touched || form.$submitted)}">
+            <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && (form.abreviatura.$touched || form.$submitted)}">
                 <label>Abreviatura</label>
                 <input type="text" name="abreviatura" ng-model="view.agencia.abreviatura" ng-maxlength="30" class="form-control" required/>
                 <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$touched || form.$submitted">
-                    <div class="validate-has-error" ng-message="required">Ingrese abreviatura.</div>
-                    <div class="validate-has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
+                    <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
+                    <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
                 </div>
             </div>
         </div>
@@ -41,14 +41,14 @@
 
     <sg-ubigeo name="ubigeo" ng-model="view.agencia.ubigeo" requerido="true">
     </sg-ubigeo>
-    <div class="form-group" ng-class="{ 'validate-has-error' : form.ubigeo.$invalid }" style="margin-top: -10px;">
+    <div class="form-group" ng-class="{ 'has-error' : form.ubigeo.$invalid }" style="margin-top: -10px;">
         <div ng-messages="form.ubigeo.$error" ng-if="form.ubigeo.$dirty || form.$submitted">
-            <div class="validate-has-error" style="color: #cc3f44; font-size: 12px;" ng-message="sgubigeo">Ingrese ubigeo.</div>
+            <div class="has-error" style="color: #cc3f44; font-size: 12px;" ng-message="sgubigeo">Ingrese ubigeo.</div>
         </div>
     </div>
 
     <p>
         <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-        <button type="button" class="btn btn-white" ui-sref="^.resumen">Cancelar</button>
+        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
     </p>
-</div>
+</form>
