--- a/public/views/sucursal/form-editar-sucursal-resumen.html
+++ b/public/views/sucursal/form-editar-sucursal-resumen.html
@@ -52,19 +52,18 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <table class="table table-striped table-bordered table-condensed">
-                            <caption ng-show="!gridOptions.data.length">No se encontraron agencias.</caption>
-                            <thead ng-show="gridOptions.data.length">
+                            <caption ng-show="!loadObjects.agencias.length">No se encontraron agencias.</caption>
+                            <thead ng-show="loadObjects.agencias.length">
                             <tr>
                                 <th>#</th>
                                 <th>Cod.</th>
                                 <th>Denominacion</th>
                                 <th>Ubigeo</th>
                                 <th>Estado</th>
-                                <th>Edit</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="item in gridOptions.data">
+                            <tr ng-repeat="item in loadObjects.agencias">
                                 <td><span ng-bind="$index+1"></span></td>
                                 <td>
                                     <span ng-bind="item.codigo"></span>
@@ -78,15 +77,11 @@
                                 <td>
                                     <span ng-bind="item.estado | si_no:'activo'"></span>
                                 </td>
-                                <td style="text-align: center">
-                                    <button type="button" ng-click="gridActions.edit(item)" class="btn btn-info btn-xs">Ver</button>
-                                </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <button type="button" ui-sref="^.crearAgencia.datosPrincipales" class="btn btn-primary">Nuevo</button>
             </div>
         </div>
     </div>
