--- a/public/views/agencia/form-editar-agencia-resumen.html
+++ b/public/views/agencia/form-editar-agencia-resumen.html
@@ -49,6 +49,19 @@
                         </div>
                     </div>
                 </div>
+                <div style="border-bottom: 1px solid #e5e5e5;margin-bottom: 20px;">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <p>Sucursal:&nbsp;</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <p><strong ng-bind="view.agencia.sucursal.denominacion"></strong></p>
+                        </div>
+                    </div>
+                </div>
+
                 <button type="button" ui-sref="^.datosPrincipales" class="btn btn-default">Editar</button>
             </div>
         </div>
