--- a/public/views/agencia/form-crear-agencia.html
+++ b/public/views/agencia/form-crear-agencia.html
@@ -31,19 +31,22 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.codigo.$invalid && (form.codigo.$touched || form.$submitted)}">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.codigo.$invalid && form.codigo.$dirty }">
                                         <label>Codigo</label>
-                                        <input type="text"
-                                               name="codigo"
-                                               ng-model="view.agencia.codigo"
-                                               sg-codigo-agencia-validate
-                                               ui-mask="99"
-                                               class="form-control" required/>
-                                        <div ng-messages="form.codigo.$error" ng-if="form.codigo.$touched || form.$submitted">
-                                            <div class="has-error" ng-message="codigoDisponible">Codigo no disponible.</div>
+                                        <div class="input-group">
+                                            <span class="input-group-addon">{{combo.selected.sucursal.abreviatura}}-</span>
+                                            <input type="text"
+                                                   name="codigo"
+                                                   ng-model="view.agencia.codigo"
+                                                   sg-codigo-agencia-validate
+                                                   ui-mask="99"
+                                                   class="form-control" required/>
+                                        </div>
+                                        <div ng-messages="form.codigo.$error" ng-if="form.codigo.$dirty">
+                                            <div class="has-error" ng-message="disponible">Codigo de agencia no disponible.</div>
                                             <div class="has-error" ng-message="required">Ingrese codigo.</div>
                                         </div>
-                                        <span ng-show="form.codigo.$pending" us-spinner="spinnerConfig"></span>
+                                        <span ng-show="form.codigo.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4" ng-if="!view.sucursal.id && !view.agencia.id">
