--- a/public/views/trabajador/form-crear-trabajador.html
+++ b/public/views/trabajador/form-crear-trabajador.html
@@ -1,29 +1,100 @@
-<div>
-    <div class="page-title full-width">
-        <div class="title-env">
-            <h1 class="title ng-binding">Crear trabajador</h1>
-            <p class="description ng-binding">Crea un trabajador en una agencia.</p>
-        </div>
-    </div>
+<div class="bg-light lter b-b wrapper-md">
+    <h1 class="m-n font-thin h3">Crear trabajador</h1>
+</div>
+
+<div class="wrapper-md">
     <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title" ui-sref=".datosPrincipales">Ingrese los datos</h3>
-            <div class="panel-options">
-                <a href="" data-toggle="panel">
-                    <span class="collapse-icon">–</span>
-                    <span class="expand-icon">+</span>
-                </a>
-                <a href="" data-toggle="remove">
-                    ×
-                </a>
-            </div>
-        </div>
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
+
                     <form name="form" ng-submit="submit()" novalidate>
-                        <div ui-view></div>
+
+                        <div>
+                            <h4><strong>Datos principales</strong> </h4>
+
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && (form.sucursal.$touched || form.$submitted)}">
+                                        <label>Sucursal</label>
+                                        <ui-select name="sucursal" ng-model="combo.selected.sucursal" autofocus required>
+                                            <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
+                                            <ui-select-choices repeat="item in combo.sucursal | filter: $select.search">
+                                                <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                        <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese sucursal.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.agencia.$invalid && (form.agencia.$touched || form.$submitted)}">
+                                        <label>Agencia</label>
+                                        <ui-select name="agencia" ng-model="combo.selected.agencia" required>
+                                            <ui-select-match placeholder="Agencia">{{$select.selected.denominacion}}</ui-select-match>
+                                            <ui-select-choices repeat="item in combo.agencia | filter: $select.search">
+                                                <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                        <div ng-messages="form.sucursal.$error" ng-if="form.agencia.$touched || form.$submitted">
+                                            <div class="has-error" ng-message="required">Ingrese agencia.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <div class="form-group" data-ng-class="{ 'has-error' : form.tipoDocumento.$invalid && (form.tipoDocumento.$touched || form.$submitted)}">
+                                        <label>Tipo documento</label>
+                                        <ui-select name="tipoDocumento" data-ng-model="combo.selected.tipoDocumento" theme="bootstrap" required>
+                                            <ui-select-match placeholder="Seleccione">{{$select.selected.abreviatura}}</ui-select-match>
+                                            <ui-select-choices repeat="item in combo.tipoDocumento | filter: $select.search">
+                                                <div data-ng-bind-html="item.abreviatura | highlight: $select.search"></div>
+                                            </ui-select-choices>
+                                        </ui-select>
+                                        <div data-ng-messages="form.tipoDocumento.$error" data-ng-if="form.tipoDocumento.$touched || form.$submitted">
+                                            <div class="has-error" data-ng-message="required">Ingrese documento.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4" data-ng-class="{ 'has-error' : form.numeroDocumento.$invalid && (form.numeroDocumento.$dirty || form.numeroDocumento.$touched || form.$submitted)}">
+                                    <div class="form-group">
+                                        <label>N&uacute;mero documento</label>
+                                        <div class="input-group">
+                                            <input type="text" name="numeroDocumento" data-ng-model="view.trabajador.numeroDocumento" ui-keypress="{13:'check($event)'}" data-ng-pattern="/^[0-9]+$/" data-ng-minlength="combo.selected.tipoDocumento.cantidadCaracteres" data-ng-maxlength="combo.selected.tipoDocumento.cantidadCaracteres" class="form-control" required/>
+                                            <span class="input-group-btn"><button type="button" data-ng-click="check()" tooltip="Check" tooltip-trigger="mouseenter" tooltip-placement="bottom" class="btn btn-default"><span class="glyphicon glyphicon-check"></span></button></span>
+                                        </div>
+                                        <div data-ng-messages="form.numeroDocumento.$error" data-ng-if="form.numeroDocumento.$dirty || form.numeroDocumento.$touched || form.$submitted">
+                                            <div class="has-error" data-ng-message="required">Ingrese numero documento.</div>
+                                            <div class="has-error" data-ng-message="minlength">Debe tener <span data-ng-bind="combo.selected.tipoDocumento.cantidadCaracteres"></span> digitos.</div>
+                                            <div class="has-error" data-ng-message="maxlength">Debe tener <span data-ng-bind="combo.selected.tipoDocumento.cantidadCaracteres"></span> digitos.</div>
+                                            <div class="has-error" data-ng-message="pattern">Numero invalido.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.direccion.$invalid && (form.direccion.$touched || form.$submitted)}">
+                                        <label>Persona</label>
+                                        <h4>
+                                            <span ng-bind="view.loaded.persona.apellidoPaterno"></span>&nbsp;
+                                            <span ng-bind="view.loaded.persona.apellidoMaterno"></span>,&nbsp;
+                                            <span ng-bind="view.loaded.persona.nombres"></span>&nbsp;
+                                        </h4>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <p>
+                                <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
+                                <button type="button" class="btn btn-default" ui-sref="^.buscarTrabajadores">Cancelar</button>
+                            </p>
+                        </div>
+
                     </form>
+
                 </div>
             </div>
         </div>
