--- a/public/views/trabajador/form-editar-trabajador.html
+++ b/public/views/trabajador/form-editar-trabajador.html
@@ -18,6 +18,11 @@
                             Datos principales
                         </a>
                     </li>
+                    <li ui-sref-active="active">
+                        <a href ui-sref=".accesoSistema">
+                            Usuario
+                        </a>
+                    </li>
                     <li class="pull-right">
                         <div class="btn-group">
                             <button type="button" data-ng-click="desactivar()" class="btn btn-danger">Desactivar</button>
