--- a/public/views/trabajador/form-editar-trabajador-accesoSistema.html
+++ b/public/views/trabajador/form-editar-trabajador-accesoSistema.html
@@ -1,36 +1,50 @@
-<h4><strong>Acceso al sistema</strong></h4>
+<form name="form" data-ng-submit="submit()" novalidate>
+    <h4><strong>Acceso al sistema</strong></h4>
 
-<div class="row">
-    <div class="col-sm-4">
-        <div class="form-group" ng-class="{ 'validate-has-error' : form.usuario.$invalid && (form.usuario.$touched || form.$submitted)}">
-            <label>Usuario</label>
-            <ui-select name="usuario" ng-model="combo.selected.usuario" ui-autofocus required>
-                <ui-select-autoload pk-name="username" comparator="view.trabajador.usuario"></ui-select-autoload>
-                <ui-select-match placeholder="Seleccione">{{$select.selected.username}}</ui-select-match>
-                <ui-select-choices repeat="item in combo.usuario track by $index"
-                                   refresh="refreshComboUsuario($select.search)"
-                                   refresh-delay="500">
-                    <div ng-bind-html="item.username | highlight: $select.search"></div>
-                </ui-select-choices>
-            </ui-select>
-            <div ng-messages="form.usuario.$error" ng-if="form.usuario.$touched || form.$submitted">
-                <div class="validate-has-error" ng-message="required">Ingrese usuario.</div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="form-group">
+                <label>Usuario asignado</label>
+                <h4>
+                    <span ng-if="view.loaded.trabajadorUsuario.usuario" ng-bind="view.loaded.trabajadorUsuario.usuario"></span>
+                    <span ng-if="!view.loaded.trabajadorUsuario.usuario">No tiene un usuario asignado</span>
+                </h4>
             </div>
         </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="form-group">
+        <div class="col-sm-4">
             <div class="form-group">
-                <label>&nbsp;</label>
-                <div class="input-group">
-                    <button type="button" ng-click="desvincular()" class="btn btn-danger">Desvincular</button>
+                <div class="form-group">
+                    <label>&nbsp;</label>
+                    <div class="input-group">
+                        <button type="button" ng-if="view.loaded.trabajadorUsuario.usuario" ng-click="desvincular()" class="btn btn-danger">Desvincular</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<p>
-    <button type="button" class="btn btn-primary" ng-click="setUsuario()" ladda="control.block" data-style="expand-right">Guardar</button>
-    <button type="button" class="btn btn-white" ui-sref="^.resumen">Cancelar</button>
-</p>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="form-group" ng-class="{ 'has-error' : form.usuario.$invalid && (form.usuario.$touched || form.$submitted)}">
+                <label>Usuarios disponibles</label>
+                <ui-select name="usuario" ng-model="combo.selected.usuario" ui-autofocus required>
+                    <ui-select-autoload pk-name="username" comparator="view.trabajador.usuario"></ui-select-autoload>
+                    <ui-select-match placeholder="Seleccione">{{$select.selected.username}}</ui-select-match>
+                    <ui-select-choices repeat="item in combo.usuario track by $index"
+                                       refresh="refreshComboUsuario($select.search)"
+                                       refresh-delay="500">
+                        <div ng-bind-html="item.username | highlight: $select.search"></div>
+                    </ui-select-choices>
+                </ui-select>
+                <div ng-messages="form.usuario.$error" ng-if="form.usuario.$touched || form.$submitted">
+                    <div class="has-error" ng-message="required">Ingrese usuario.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <p>
+        <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
+        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
+    </p>
+</form>
