--- a/public/views/agencia/form-buscar-agencia.html
+++ b/public/views/agencia/form-buscar-agencia.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="col-sm-3">
                             <div class="form-group pull-right">
-                                <button type="button" data-ng-click="nuevo()" class="btn btn-primary">Nuevo</button>
+                                <a href="" ui-sref="^.crearAgencia" data-ng-click="nuevo()" class="btn btn-primary">Nuevo</a>
                             </div>
                         </div>
                     </div>
