--- a/public/views/agencia/form-crear-agencia.html
+++ b/public/views/agencia/form-crear-agencia.html
@@ -8,14 +8,14 @@
             <div class="row">
                 <div class="col-sm-12">
 
-                    <form name="form" ng-submit="submit()" novalidate>
+                    <form name="form" sg-read-only="!access.administrarAgencias" novalidate>
 
                         <div>
                             <h4><strong>Datos principales</strong> </h4>
 
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && (form.sucursal.$touched || form.$submitted)}">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && form.sucursal.$dirty }">
                                         <label>Sucursal</label>
                                         <ui-select name="sucursal" ng-model="combo.selected.sucursal" autofocus required>
                                             <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
@@ -23,7 +23,7 @@
                                                 <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
                                             </ui-select-choices>
                                         </ui-select>
-                                        <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$touched || form.$submitted">
+                                        <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$dirty">
                                             <div class="has-error" ng-message="required">Ingrese sucursal.</div>
                                         </div>
                                     </div>
@@ -38,7 +38,10 @@
                                             <input type="text"
                                                    name="codigo"
                                                    ng-model="view.agencia.codigo"
+
                                                    sg-codigo-agencia-validate
+                                                   sg-sucursal="combo.selected.sucursal"
+
                                                    ui-mask="99"
                                                    class="form-control" required/>
                                         </div>
@@ -49,21 +52,21 @@
                                         <span ng-show="form.codigo.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
                                     </div>
                                 </div>
-                                <div class="col-sm-4" ng-if="!view.sucursal.id && !view.agencia.id">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && (form.denominacion.$touched || form.$submitted)}">
+                                <div class="col-sm-4">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && form.denominacion.$dirty }">
                                         <label>Denominacion</label>
                                         <input type="text" name="denominacion" ng-model="view.agencia.denominacion" ng-maxlength="60" class="form-control" required/>
-                                        <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$touched || form.$submitted">
+                                        <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$dirty">
                                             <div class="has-error" ng-message="required">Ingrese denominacion.</div>
                                             <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && (form.abreviatura.$touched || form.$submitted)}">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && form.abreviatura.$dirty }">
                                         <label>Abreviatura</label>
                                         <input type="text" name="abreviatura" ng-model="view.agencia.abreviatura" ng-maxlength="30" class="form-control" required/>
-                                        <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$touched || form.$submitted">
+                                        <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$dirty">
                                             <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
                                             <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
                                         </div>
@@ -73,31 +76,30 @@
 
                             <sg-ubigeo name="ubigeo" ng-model="view.agencia.ubigeo" requerido="true">
                             </sg-ubigeo>
-
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.direccion.$invalid && (form.direccion.$touched || form.$submitted)}">
-                                        <label>Direccion</label>
-                                        <input type="text"
-                                               name="direccion"
-                                               ng-model="view.agencia.direccion"
-                                               class="form-control" required/>
-                                        <div ng-messages="form.direccion.$error" ng-if="form.direccion.$touched || form.$submitted">
-                                            <div class="has-error" ng-message="required">Ingrese direccion.</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
                             <div class="form-group" ng-class="{ 'has-error' : form.ubigeo.$invalid }" style="margin-top: -10px;">
                                 <div ng-messages="form.ubigeo.$error" ng-if="form.ubigeo.$dirty || form.$submitted">
                                     <div class="has-error" style="color: #cc3f44; font-size: 12px;" ng-message="sgubigeo">Ingrese ubigeo.</div>
                                 </div>
                             </div>
 
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <div class="form-group" ng-class="{ 'has-error' : form.direccion.$invalid && form.direccion.$dirty }">
+                                        <label>Direccion</label>
+                                        <input type="text"
+                                               name="direccion"
+                                               ng-model="view.agencia.direccion"
+                                               class="form-control" required/>
+                                        <div ng-messages="form.direccion.$error" ng-if="form.direccion.$dirty">
+                                            <div class="has-error" ng-message="required">Ingrese direccion.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <p>
-                                <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-                                <button type="button" class="btn btn-default" ui-sref="^.buscarAgencias">Cancelar</button>
+                                <button sg-save ladda="control.block">Guardar</button>
+                                <button sg-cancel ui-sref="^.buscarAgencias">Cancelar</button>
                             </p>
                         </div>
 
