--- a/public/views/agencia/form-editar-agencia-datosPrincipales.html
+++ b/public/views/agencia/form-editar-agencia-datosPrincipales.html
@@ -1,4 +1,5 @@
-<form name="form" data-ng-submit="submit()" novalidate>
+<form name="form" sg-read-only="!access.administrarAgencias" novalidate>
+
     <h4><strong>Datos principales</strong> </h4>
 
     <div class="row">
@@ -18,20 +19,20 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && (form.denominacion.$touched || form.$submitted)}">
+            <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && form.denominacion.$dirty }">
                 <label>Denominacion</label>
                 <input type="text" name="denominacion" ng-model="view.agencia.denominacion" ng-maxlength="60" class="form-control" autofocus required/>
-                <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$touched || form.$submitted">
+                <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$dirty">
                     <div class="has-error" ng-message="required">Ingrese denominacion.</div>
                     <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && (form.abreviatura.$touched || form.$submitted)}">
+            <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && form.abreviatura.$dirty }">
                 <label>Abreviatura</label>
                 <input type="text" name="abreviatura" ng-model="view.agencia.abreviatura" ng-maxlength="30" class="form-control" required/>
-                <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$touched || form.$submitted">
+                <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$dirty || form.$submitted">
                     <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
                     <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
                 </div>
@@ -48,7 +49,8 @@
     </div>
 
     <p>
-        <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
+        <button sg-save ladda="control.block">Guardar</button>
+        <button sg-cancel ui-sref="^.resumen">Cancelar</button>
     </p>
+
 </form>
