--- a/public/views/sucursal/form-crear-sucursal.html
+++ b/public/views/sucursal/form-crear-sucursal.html
@@ -8,43 +8,41 @@
             <div class="row">
                 <div class="col-sm-12">
 
-                    <form name="form" ng-submit="submit()" novalidate>
+                    <form name="form" sg-read-only="!access.administrarSucursales" novalidate>
 
-                        <div>
-                            <h4><strong>Datos principales</strong></h4>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && form.abreviatura.$dirty}">
-                                        <label>Abreviatura</label>
-                                        <input type="text" name="abreviatura" ng-model="view.sucursal.abreviatura" sg-abreviatura-sucursal-validate ng-maxlength="30" class="form-control" autofocus required/>
-                                        <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$dirty">
-                                            <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
-                                            <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
-                                            <div class="has-error" ng-message="disponible">Abreviatura no disponible.</div>
-                                        </div>
-                                        <span ng-show="form.abreviatura.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
+                        <h4><strong>Datos principales</strong></h4>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="form-group" ng-class="{ 'has-error' : form.abreviatura.$invalid && form.abreviatura.$dirty}">
+                                    <label>Abreviatura</label>
+                                    <input type="text" name="abreviatura" ng-model="view.sucursal.abreviatura" sg-abreviatura-sucursal-validate ng-maxlength="30" class="form-control" autofocus required/>
+                                    <div ng-messages="form.abreviatura.$error" ng-if="form.abreviatura.$dirty">
+                                        <div class="has-error" ng-message="required">Ingrese abreviatura.</div>
+                                        <div class="has-error" ng-message="maxlength">Maximo 30 caracteres.</div>
+                                        <div class="has-error" ng-message="disponible">Abreviatura no disponible.</div>
                                     </div>
+                                    <span ng-show="form.abreviatura.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && form.denominacion.$dirty }">
-                                        <label>Denominacion</label>
-                                        <input type="text" name="denominacion" ng-model="view.sucursal.denominacion" sg-denominacion-sucursal-validate ng-maxlength="60" class="form-control" required/>
-                                        <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$dirty">
-                                            <div class="has-error" ng-message="required">Ingrese denominacion.</div>
-                                            <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
-                                            <div class="has-error" ng-message="disponible">Denominacion no disponible.</div>
-                                        </div>
-                                        <span ng-show="form.denominacion.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <p>
-                                <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-                                <button type="button" class="btn btn-default" ui-sref="^.buscarSucursales">Cancelar</button>
-                            </p>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && form.denominacion.$dirty }">
+                                    <label>Denominacion</label>
+                                    <input type="text" name="denominacion" ng-model="view.sucursal.denominacion" sg-denominacion-sucursal-validate ng-maxlength="60" class="form-control" required/>
+                                    <div ng-messages="form.denominacion.$error" ng-if="form.denominacion.$dirty">
+                                        <div class="has-error" ng-message="required">Ingrese denominacion.</div>
+                                        <div class="has-error" ng-message="maxlength">Maximo 60 caracteres.</div>
+                                        <div class="has-error" ng-message="disponible">Denominacion no disponible.</div>
+                                    </div>
+                                    <span ng-show="form.denominacion.$pending" us-spinner="{radius:4,width:1,length: 2,top: '56%',left: '89.8%', className: 'spinner-xs'}"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <p>
+                            <button sg-save ladda="control.block">Guardar</button>
+                            <button sg-cancel ui-sref="^.buscarSucursales">Cancelar</button>
+                        </p>
 
                     </form>
 
