--- a/public/views/sucursal/form-editar-sucursal-datosPrincipales.html
+++ b/public/views/sucursal/form-editar-sucursal-datosPrincipales.html
@@ -1,4 +1,4 @@
-<form name="form" data-ng-submit="submit()" novalidate>
+<form name="form" sg-read-only="!access.administrarSucursales" novalidate>
 
     <h4><strong>Datos principales</strong></h4>
     <div class="row">
@@ -30,8 +30,8 @@
         </div>
     </div>
     <p>
-        <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
+        <button sg-save ladda="control.block">Guardar</button>
+        <button sg-cancel ui-sref="^.resumen">Cancelar</button>
     </p>
 
 </form>
