--- a/public/views/sucursal/form-crear-sucursal.html
+++ b/public/views/sucursal/form-crear-sucursal.html
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button sg-save ladda="control.block">Guardar</button>
+                    <button sg-save>Guardar</button>
                     <button sg-cancel ui-sref="^.buscarSucursales">Cancelar</button>
                 </div>
             </div>
