--- a/public/views/sucursal/form-editar-sucursal.html
+++ b/public/views/sucursal/form-editar-sucursal.html
@@ -21,8 +21,8 @@
                     <li class="pull-right">
                         <div class="btn-group">
 
-                            <form name="form" data-ng-submit="desactivar()" sg-read-only="!access.administrarSucursales" novalidate>
-                                <button sg-delete>Desactivar</button>
+                            <form name="form" data-ng-submit="eliminar()" sg-read-only="!access.administrarSucursales" novalidate>
+                                <button sg-delete>Eliminar</button>
                             </form>
 
                         </div>
