--- a/public/views/sucursal/form-editar-sucursal.html
+++ b/public/views/sucursal/form-editar-sucursal.html
@@ -14,8 +14,8 @@
                         </a>
                     </li>
                     <li ui-sref-active="active">
-                        <a href ui-sref=".datosPrincipales">
-                            Datos principales
+                        <a href ui-sref=".agencias.buscarAgencias">
+                            Agencias
                         </a>
                     </li>
                     <li class="pull-right">
