--- a/public/views/sucursal/form-editar-sucursal.html
+++ b/public/views/sucursal/form-editar-sucursal.html
@@ -1,6 +1,4 @@
-<div class="bg-light lter b-b wrapper-md">
-    <h1 class="m-n font-thin h3">Editar Sucursal</h1>
-</div>
+<h1>Editar Sucursal</h1>
 
 <div class="panel panel-default">
     <div class="panel-body">
