--- a/public/views/sucursal/agencia/form-buscar-agencia.html
+++ b/public/views/sucursal/agencia/form-buscar-agencia.html
@@ -3,17 +3,19 @@
 <table class="table table-striped table-bordered table-condensed">
     <thead>
     <tr>
-        <th class="kc-table-actions" colspan="4">
+        <th colspan="6">
             <div class="pull-right">
                 <a href="" ui-sref="^.crearAgencia" class="btn btn-primary">Add Agencia</a>
             </div>
         </th>
     </tr>
     <tr data-ng-show="loadObjects.agencias.length">
-        <th>#</th>
+        <th width="5%">#</th>
         <th>Denominacion</th>
-        <th>Ubigeo</th>
-        <th></th>
+        <th>Direccion</th>
+        <th width="10%">Ubigeo</th>
+        <th width="5%">Edit</th>
+        <th width="5%">Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -23,10 +25,16 @@
             <span ng-bind="item.denominacion"></span>
         </td>
         <td>
+            <span ng-bind="item.direccion"></span>
+        </td>
+        <td>
             <span ng-bind="item.ubigeo"></span>
         </td>
         <td>
-            <a href="" data-ng-click="edit(item)" class="btn btn-primary btn-sm">Edit</a>
+            <button type="button" data-ng-click="edit(item)" class="btn btn-info btn-xs">Editar</button>
+        </td>
+        <td>
+            <button type="button" data-ng-click="remove(item)" class="btn btn-danger btn-xs">Eliminar</button>
         </td>
     </tr>
     <tr data-ng-show="!loadObjects.agencias.length">
