--- a/public/views/sucursal/form-buscar-sucursal.html
+++ b/public/views/sucursal/form-buscar-sucursal.html
@@ -1,6 +1,4 @@
-<div class="bg-light lter b-b wrapper-md">
-    <h1 class="m-n font-thin h3">Buscar sucursales</h1>
-</div>
+<h1>Buscar sucursales</h1>
 
 <div class="wrapper-md">
     <div class="panel panel-default">
