--- a/public/views/sucursal/form-editar-sucursal-resumen.html
+++ b/public/views/sucursal/form-editar-sucursal-resumen.html
@@ -35,9 +35,9 @@
                             <caption ng-show="!loadObjects.agencias.length">No se encontraron agencias.</caption>
                             <thead ng-show="loadObjects.agencias.length">
                             <tr>
-                                <th>#</th>
+                                <th width="10%">#</th>
                                 <th>Denominacion</th>
-                                <th>Ubigeo</th>
+                                <th width="20%">Ubigeo</th>
                             </tr>
                             </thead>
                             <tbody>
